import "base/aperture_parameters.proto";

// The radius of subapertures is controlled by the fill factor and encircled
// diameter in the Simulation protobuf. If F is the global fill factor, R is
// encircled diameter and f is subaperture_fill_factor, then the radius of the
// subaperture, r, is
//
// r = R * sqrt(F / (3f))
//
// Thus, if you know the encircled diameter, subaperture fill factor and want
// the subapertures to be centered at a distance (R-r) away from the center,
// set the fill factor to
//
// F = (3 * r^2  * f) / R^2
message Triarm3Parameters {
  // The fill factor of each of the subapertures in the Triarm9 aperture.
  optional double subaperture_fill_factor = 1;
}

extend mats.ApertureParameters {
  optional Triarm3Parameters triarm3_params = 18375;
}
